# quickps

./: .gitignore  README.md  meson.build
examples/: .gitignore  index.html  meson.build  pyproject.toml
examples/scripts/: esbuild.py
examples/src/: crane.js  cube.js  logo.js  scene.js  task.js  twgl.config
examples/tests/: conftest.py  test_quickps.py
libquickps/: cairomm.test.cpp  e2e.test.cpp  isinstanceof.test.cpp  meson.build  microtask.test.cpp  paperjs.test.cpp  quickps.cpp  quickps.hpp  quickps.test.cpp
libquickps/canvas/: color.cpp  color.hpp  color.test.cpp  context.cpp  context.hpp  context.test.cpp  facade.cpp  facade.hpp  meson.build  rendering_context_2d.cpp  rendering_context_2d.hpp  rendering_context_2d.test.cpp  state.cpp  state.hpp  state.test.cpp  style.cpp  style.hpp
libquickps/quickjsmm/: context.cpp  context.hpp  context.test.cpp  esm.cpp  esm.hpp  esm.test.cpp  facade.cpp  facade.hpp  fixture.cpp  fixture.hpp  meson.build  quickjs.hpp  value.cpp  value.hpp  value.test.cpp
quickps/: meson.build  qpsc.cpp
subprojects/: .gitignore  paperjs.wrap  quickjs.wrap
subprojects/packagefiles/paperjs/: meson.build
subprojects/packagefiles/paperjs/scripts/: prepro.py
subprojects/packagefiles/paperjs/src/: paper.q.js
subprojects/packagefiles/quickjs/: meson.build
